[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/MainButtons.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 204.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 197.0
margin_bottom = 593.0
script = ExtResource( 1 )

[node name="LevelsButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 190.0
margin_bottom = 143.0
size_flags_vertical = 3
text = "Levels"

[node name="CreditsButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 190.0
margin_bottom = 291.0
size_flags_vertical = 3
text = "Credits"

[node name="OptionsButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 295.0
margin_right = 190.0
margin_bottom = 438.0
size_flags_vertical = 3
text = "Options"

[node name="QuitButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 442.0
margin_right = 190.0
margin_bottom = 586.0
size_flags_vertical = 3
text = "Quit"

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 208.0
margin_top = 293.0
margin_right = 1024.0
margin_bottom = 307.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "It's Not Rocket Science"
align = 1
